fix: display product on safari 9

--- a/src/app/kng-product/product.component.scss
+++ b/src/app/kng-product/product.component.scss
@@ -155,6 +155,7 @@
       max-width: 600px;
       width: 85%;
       height: 100%;
+      min-height: 400px;
       @media (max-width:425px) {
         max-width: 100vw;
         width: 100vw;
